Atualizado index.html
Corrigindo alguns erros de gramática

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>GALINHA CAIPIRA RECIPE</title>
+    <title>Receita de galinha caipira</title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
@@ -21,7 +21,7 @@
 	</ul>
 	<h2>Ingredientes </h2>
 	<ul>
-	    <li> Um todo pesado pesando perto de 2,5 kg (aproximadamente 3 libras).</li>
+	    <li> Uma galinha pesada pesando perto de 2,5 kg.</li>
 	    <li>Evite pássaros cultivados industrialmente, pois eles podem tornar o ensopado muito oleoso e sem sabor.</li>
 	    <li>Uma xícara de cebolas em cubos de qualquer tipo.</li>
 	    <li>Meia xícara de cebolinha em cubos.</li>
@@ -29,10 +29,10 @@
 	    <li>Uma chaleira completa de água cozida.</li>
 	</ul>
 	<h2>Passo a Passo </h2>
-	<!--TODO colocar esse texto em uma lista organizada -->
+	
 	<ol>
 	    <li> Corte o frango em pedaços. Remova os ossos mobiliários ou pequenos, se quiser. Sal e pimenta a gosto agora.</li>
-	    <li>Em uma panela (melhor se o ferro fundido), adicione a banha e aqueça muito bem -a.</li>
+	    <li>Em uma panela (melhor se for de ferro fundido), adicione a banha e aqueça muito bem.</li>
 	    <li> Adicione o frango e abaixe o fogo.</li>
 	    <li>Após a carne, adicione as cebolas em cubos.</li>
 	    <li>Quando a cebola dourar, cubra a panela com água fervente e deixe ferver por duas horas. Se secar, adicione mais água.</li>
